--- a/index.css
+++ b/index.css
@@ -247,7 +247,7 @@ a{
 }
 
 .card:hover {
-  box-shadow: 0 6px 12px rgba(0, 0, 0, 0.2);
+  transform: scale(0.98);
 }
 
 .card-image {
@@ -795,17 +795,17 @@ a{
 
 .spinner {
   border: 8px solid rgba(255, 255, 255, 0.3);
-  border-top: 8px solid #3498db;
+  border-top: 8px solid var(--green-color);
   border-radius: 50%;
   width: 50px;
   height: 50px;
   animation: spin 1.5s linear infinite;
 }
 
-p {
+#loadingP {
   margin-top: 15px;
   font-size: 18px;
-  color: #3498db;
+  color: var(--green-color);
 }
 
 /* Keyframes for spinner animation */
@@ -1087,10 +1087,56 @@ input:focus, textarea:focus {
 
 
 }
-
+::-webkit-scrollbar{
+  display:none;
+}
 #name{
 
    color:var(--yellow-color);
 }
 
 
+
+
+/*Error Page*/
+
+.EroorPageContainer{
+
+  width:100%;
+  height:100vh;
+}
+#EroorH{
+  font-size: 3rem;
+  font-weight: bold;
+  margin-bottom: 15px;
+  animation: fadeIn 1.5s ease-in-out;
+}
+
+#EroorP{
+  font-size: 1.5rem;
+  opacity: 0.9;
+  animation: fadeIn 2s ease-in-out;
+}
+
+.Errorretry-button{
+  margin-top: 20px;
+  padding: 15px 30px;
+  font-size: 1.2rem;
+  font-weight: bold;
+  color: #FFFFFF;
+  background-color: #008000;
+  border: none;
+  border-radius: 10px;
+  cursor: pointer;
+  transition: transform 0.2s ease, background-color 0.3s ease;
+}
+
+.Errorretry-button:hover {
+  background-color: #006400;
+  transform: scale(1.1);
+}
+
+@keyframes fadeIn {
+  from { opacity: 0; transform: translateY(-20px); }
+  to { opacity: 1; transform: translateY(0); }
+}
